UtahLiveDataTest/src/objects/PreApplicationServiceArea__c.object
<CustomObject>
    <description>[Business] Associates a Service area with an PreApplication</description>
    <fields>
        <fullName>AmountFormula__c</fullName>
        <formula>DirectAmount__c + IndirectAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Negotiated Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BudgetPeriod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget Period</label>
        <referenceTo>BudgetPeriod__c</referenceTo>
        <relationshipLabel>PreApplication Project Areas</relationshipLabel>
        <relationshipName>PreApplication_Project_Areas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CFDANumber__c</fullName>
        <description>This field is used in Non-Construction Form</description>
        <label>CFDA Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DirectAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Direct Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FederalFunds__c</fullName>
        <description>This field is used in Non-Construction form.</description>
        <label>Federal Funds</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FirstFundingYear__c</fullName>
        <description>This field is used in Non-Construction form.</description>
        <label>First Funding Year</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FourthFundingYear__c</fullName>
        <description>This field is used in Non-Construction form</description>
        <label>Fourth Funding Year</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IndirectAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Indirect Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NonFederalApplicantFunds__c</fullName>
        <description>This field is used in Non-Construction Form</description>
        <label>Non-Federal Applicant Funds</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NonFederalFunds__c</fullName>
        <description>This field is used in Non-Construction Form</description>
        <label>Non Federal Funds</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NonFederalStateFunds__c</fullName>
        <description>This field is used in Non-Construction form.</description>
        <label>Non Federal State Funds</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OtherNonFederalFunds__c</fullName>
        <description>This field is used in Non-Construction form</description>
        <label>Other Non Federal Funds</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PreApplication__c</fullName>
        <label>PreApplication</label>
        <referenceTo>PreApplication__c</referenceTo>
        <relationshipName>PreApplication_Service_Areas</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RequestedAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Requested Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RevisedFederalFunds__c</fullName>
        <description>This field is used in Non-Construction Form</description>
        <label>Revised Federal Funds</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RevisedNonFederalFunds__c</fullName>
        <description>This field is used in Non Construction form</description>
        <label>Revised Non-Federal Funds</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SecondFundingYear__c</fullName>
        <description>This field is used in Non-Construction form.</description>
        <label>Second Funding Year</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ServiceAreaLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Area</label>
        <referenceTo>ServiceArea__c</referenceTo>
        <relationshipName>PreApplicationServiceAreas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ServiceAreaName__c</fullName>
        <label>Service Area Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceAreaTitle__c</fullName>
        <formula>ServiceAreaLookup__r.Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Area Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceArea__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Funding Opportunity Project Area</label>
        <referenceTo>AnnouncementServiceArea__c</referenceTo>
        <relationshipLabel>PreApplication Project Areas</relationshipLabel>
        <relationshipName>PreApplication_Service_Areas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ThirdFundingYear__c</fullName>
        <description>This field is used in Non-Construction form</description>
        <label>Third Funding Year</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>PreApplication Project Area</label>
    <nameField>
        <displayFormat>PPA-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PreApplication Project Areas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>